<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    app:cardElevation="@dimen/space_3"
    app:cardUseCompatPadding="true"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_10"
            android:layout_marginTop="@dimen/space_10"
            android:layout_marginRight="@dimen/space_10"
            android:layout_marginBottom="@dimen/space_10"
            android:orientation="vertical">

            <com.gogrocersm.storemanager.Fonts.LatoBLack
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4"
                android:layout_marginRight="@dimen/space_12"
                android:gravity="right"
                android:text="@string/st"
                android:textColor="@color/green"
                android:textSize="@dimen/text_size_X_small" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_8"
                android:background="#fff"
                android:orientation="horizontal"
                android:weightSum="2">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".9"
                    android:background="#fff"
                    android:orientation="vertical"
                    tools:ignore="Suspicious0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.gogrocersm.storemanager.Fonts.LatoBLack
                            android:id="@+id/tvName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user_id"
                            android:textColor="@color/dark_gray"
                            android:textSize="@dimen/text_size_X_small" />

                        <com.gogrocersm.storemanager.Fonts.LatoBLack
                            android:id="@+id/user_id"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/space_12"
                            android:layout_weight="1"
                            android:text=""
                            android:textColor="#000"
                            android:textSize="@dimen/text_size_small"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.gogrocersm.storemanager.Fonts.LatoBLack
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/nm"
                            android:textColor="@color/dark_gray"
                            android:textSize="@dimen/text_size_X_small" />

                        <com.gogrocersm.storemanager.Fonts.LatoBLack
                            android:id="@+id/user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/space_12"
                            android:gravity="center"
                            android:text=""
                            android:textColor="#000"
                            android:textSize="@dimen/text_size_X_small" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.gogrocersm.storemanager.Fonts.LatoBLack
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/ph"
                            android:textColor="@color/dark_gray"
                            android:textSize="@dimen/text_size_X_small" />

                        <com.gogrocersm.storemanager.Fonts.LatoBLack
                            android:id="@+id/user_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/space_12"
                            android:gravity="center"
                            android:text=""
                            android:textColor="#000"
                            android:textSize="@dimen/text_size_X_small" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1"
                    android:background="#fff"
                    android:orientation="vertical"
                    tools:ignore="Suspicious0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.gogrocersm.storemanager.Fonts.LatoBLack
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/em"
                            android:textColor="@color/dark_gray"
                            android:textSize="@dimen/text_size_X_small" />

                        <com.gogrocersm.storemanager.Fonts.LatoBLack
                            android:id="@+id/user_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/space_10"
                            android:text=""
                            android:textColor="#000"
                            android:textSize="8sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.gogrocersm.storemanager.Fonts.LatoBLack
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/tv_app_name"
                            android:textColor="@color/dark_gray"
                            android:textSize="@dimen/text_size_X_small" />

                        <com.gogrocersm.storemanager.Fonts.LatoBLack
                            android:id="@+id/wallet_ammount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/space_12"
                            android:gravity="center"
                            android:text=""
                            android:textColor="#000"
                            android:textSize="@dimen/text_size_X_small" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.gogrocersm.storemanager.Fonts.LatoBLack
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/tv_toolbar_name"
                            android:textColor="@color/dark_gray"
                            android:textSize="@dimen/text_size_X_small" />

                        <com.gogrocersm.storemanager.Fonts.LatoBLack
                            android:id="@+id/reward"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/space_12"
                            android:gravity="center"
                            android:text=""
                            android:textColor="#000"
                            android:textSize="@dimen/text_size_X_small" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>